<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartAttendance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="faclog">FACULTY LOGIN</string>
    <string name="uname">USERNAME</string>
    <string name="pass">PASSWORD</string>
    <string name="cname">CLASSNAME</string>
    <string name="rollid">ROLLID</string>
    <string name="studs">STUDENTS</string>
    <string name="stuname">STUDENT NAME</string>
    <string name="stuid">STUDENT ID</string>
    <string name="stuno">MOBILE NUMBER</string>
    <string name="stumail">MAIL ID</string>
    <string name="empty">"  "</string>
    <string name="mgs">MESSAGE BODY</string>
    <string name="mail">MAIL BODY</string>
    <string name="date">Date :</string>
    <string name="workg">WORKING DAYS</string>
    <string name="presentdays">PRESENT DAYS</string>
    <string name="report">REPORT</string>
    <string name="cum">CUMMULATIVE MARK:</string>

</resources>
